--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="#000000" name="theme-color"/>
     <meta
-            content="Bhayander West Relay"
+            content="Web site created using create-react-app"
             name="description"
     />
     <!--
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Bhayander West Relay</title>
+    <title>Video Broadcast Service</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
